feat: Add/remove HPs when doing HP search

--- a/webui/react/src/components/HyperparameterSearchModal.module.scss
+++ b/webui/react/src/components/HyperparameterSearchModal.module.scss
@@ -63,6 +63,7 @@
         width: 100%;
       }
       .hyperparameterContainer {
+        align-items: center;
         display: grid;
         gap: 8px;
 
@@ -84,6 +85,9 @@
           font-size: 1rem;
           font-weight: normal;
           margin: 0;
+        }
+        .delete {
+          cursor: pointer;
         }
       }
       p {
