fix: for safari

--- a/webui/react/src/components/HyperparameterSearchModal.module.scss
+++ b/webui/react/src/components/HyperparameterSearchModal.module.scss
@@ -65,6 +65,7 @@
       .hyperparameterContainer {
         display: grid;
         gap: 8px;
+        grid-auto-rows: max-content;
         overflow-x: auto;
 
         .hyperparameterName {
