fix: overflow in hyperparameter modal (#9626)

--- a/webui/react/src/components/HyperparameterSearchModal.module.scss
+++ b/webui/react/src/components/HyperparameterSearchModal.module.scss
@@ -65,6 +65,8 @@
       .hyperparameterContainer {
         display: grid;
         gap: 8px;
+        grid-auto-rows: max-content;
+        overflow-x: auto;
 
         .hyperparameterName {
           align-items: center;
