feat: Add/remove HPs when creating experiment through HP search (#9610)

--- a/webui/react/src/components/HyperparameterSearchModal.module.scss
+++ b/webui/react/src/components/HyperparameterSearchModal.module.scss
@@ -63,6 +63,7 @@
         width: 100%;
       }
       .hyperparameterContainer {
+        align-items: center;
         display: grid;
         gap: 8px;
         grid-auto-rows: max-content;
@@ -86,6 +87,9 @@
           font-size: 1rem;
           font-weight: normal;
           margin: 0;
+        }
+        .delete {
+          cursor: pointer;
         }
       }
       p {
