font-weight and color

--- a/webui/react/src/components/Metadata.module.scss
+++ b/webui/react/src/components/Metadata.module.scss
@@ -1,6 +1,5 @@
-.key {
-  color: var(--theme-surface-border-strong);
-}
-.node {
-  color: var(--theme-surface-on);
+.base {
+  :global(.ant-tree-node-content-wrapper-close) {
+    font-weight: bold;
+  }
 }
