--- a/webui/react/src/components/NavigationSideBar.module.scss
+++ b/webui/react/src/components/NavigationSideBar.module.scss
@@ -19,6 +19,7 @@
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
+    overflow: auto;
   }
   section.launch {
     align-items: center;
@@ -31,7 +32,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    min-height: 0;
+    min-height: calc(48px * 2);
     overflow: hidden;
 
     .actionButtons {
