--- a/webui/react/src/components/NavigationSideBar.module.scss
+++ b/webui/react/src/components/NavigationSideBar.module.scss
@@ -1,6 +1,7 @@
 /* stylelint-disable no-descending-specificity */
 
 .base {
+  --nav-item-height: 48px;
   background-color: var(--theme-stage);
   border-right: solid var(--theme-stroke-width) var(--theme-stage-border);
   box-sizing: border-box;
@@ -26,7 +27,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    min-height: calc(48px * 2);
+    min-height: calc(var(--nav-item-height) * 2);
     overflow: hidden;
     transition: height var(--animation-curve);
 
@@ -124,7 +125,7 @@
       display: flex;
       flex-grow: 1;
       gap: 16px;
-      height: 48px;
+      height: var(--nav-item-height);
       max-width: 100%;
       padding-right: 16px;
 
@@ -219,7 +220,7 @@
     }
   }
   .navItemContainer.hasStatus {
-    height: 48px;
+    height: var(--nav-item-height);
   }
   .user {
     width: var(--nav-side-bar-width-max);
@@ -488,7 +489,7 @@
     }
   }
   .navItemContainer.hasStatus {
-    height: 48px;
+    height: var(--nav-item-height);
   }
   .user {
     transition: width var(--animation-curve);
