fix: make navigation sidebar scrollable [ET-633] (#9803)

--- a/webui/react/src/components/NavigationSideBar.module.scss
+++ b/webui/react/src/components/NavigationSideBar.module.scss
@@ -1,6 +1,7 @@
 /* stylelint-disable no-descending-specificity */
 
 .base {
+  --nav-item-height: 48px;
   background-color: var(--theme-stage);
   border-right: solid var(--theme-stroke-width) var(--theme-stage-border);
   box-sizing: border-box;
@@ -19,20 +20,16 @@
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
-  }
-  section.launch {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    padding: 16px 0;
+    overflow: hidden auto;
     width: var(--nav-side-bar-width-max);
   }
   section.workspaces {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    min-height: 0;
+    min-height: calc(var(--nav-item-height) * 2);
     overflow: hidden;
+    transition: height var(--animation-curve);
 
     .actionButtons {
       // action buttons are hidden when the cursor is not hovered on buttons
@@ -110,7 +107,7 @@
     background-color: var(--theme-stage);
     display: flex;
     flex-wrap: nowrap;
-    width: var(--nav-side-bar-width-max);
+    width: 100%;
 
     &.active {
       background-color: var(--theme-stage-strong);
@@ -128,7 +125,7 @@
       display: flex;
       flex-grow: 1;
       gap: 16px;
-      height: 48px;
+      height: var(--nav-item-height);
       max-width: 100%;
       padding-right: 16px;
 
@@ -223,7 +220,7 @@
     }
   }
   .navItemContainer.hasStatus {
-    height: 48px;
+    height: var(--nav-item-height);
   }
   .user {
     width: var(--nav-side-bar-width-max);
@@ -237,7 +234,7 @@
   flex-basis: var(--nav-side-bar-width-min);
   transition: flex-basis var(--animation-curve);
 
-  section.launch {
+  & > section {
     transition: width var(--animation-curve);
     width: var(--nav-side-bar-width-min);
   }
@@ -292,10 +289,7 @@
   }
   .navItemContainer {
     flex-direction: column;
-    transition:
-      height var(--animation-curve),
-      width var(--animation-curve);
-    width: var(--nav-side-bar-width-min);
+    transition: width var(--animation-curve);
 
     .action,
     .label {
@@ -331,8 +325,17 @@
 .collapsedEnterDone {
   flex-basis: var(--nav-side-bar-width-min);
 
-  section.launch {
+  & > section {
     width: var(--nav-side-bar-width-min);
+  }
+  section.workspaces {
+    flex-shrink: 0;
+    overflow-y: visible;
+    transition: height var(--animation-curve);
+
+    .pinnedWorkspaces {
+      overflow-y: visible;
+    }
   }
   .logo {
     height: 24px;
@@ -366,7 +369,6 @@
   }
   .navItemContainer {
     flex-direction: column;
-    width: var(--nav-side-bar-width-min);
 
     .action,
     .label {
@@ -418,7 +420,7 @@
   flex-basis: var(--nav-side-bar-width-max);
   transition: flex-basis var(--animation-curve);
 
-  section.launch {
+  & > section {
     transition: width var(--animation-curve);
     width: var(--nav-side-bar-width-max);
   }
@@ -475,7 +477,7 @@
     transition:
       height var(--animation-curve),
       width var(--animation-curve);
-    width: var(--nav-side-bar-width-max);
+    width: 100%;
 
     .action,
     .label {
@@ -487,7 +489,7 @@
     }
   }
   .navItemContainer.hasStatus {
-    height: 48px;
+    height: var(--nav-item-height);
   }
   .user {
     transition: width var(--animation-curve);
