--- a/webui/react/src/components/HyperparameterSearchModal.module.scss
+++ b/webui/react/src/components/HyperparameterSearchModal.module.scss
@@ -14,6 +14,9 @@
     :global(.ant-modal-confirm-btns) {
       display: none;
     }
+    div[class*='ant-form-item-explain'] {
+      display: none;
+    }
     :global(.ant-form-item) {
       min-width: fit-content;
     }
