feat: add partial css selector for setting the Select_base element width as 100%

--- a/webui/react/src/pages/Admin/UserManagement.module.scss
+++ b/webui/react/src/pages/Admin/UserManagement.module.scss
@@ -11,3 +11,9 @@
 .actionBar {
   margin-bottom: 8px;
 }
+
+@media only screen and (max-width: $breakpoint-mobile) {
+  div[class^='Select_base'] {
+    width: 100%;
+  }
+}
