--- a/webui/react/src/components/HyperparameterSearchModal.module.scss
+++ b/webui/react/src/components/HyperparameterSearchModal.module.scss
@@ -66,7 +66,7 @@
         grid-auto-rows: max-content;
         overflow-x: auto;
 
-        div[class*='ant-form-item-explain'] {
+        :global(.ant-form-item-explain) {
           display: none;
         }
         .hyperparameterName {
