feat: Update breakpoints for tablet and large tablet devices

--- a/webui/react/src/pages/Admin/UserManagement.module.scss
+++ b/webui/react/src/pages/Admin/UserManagement.module.scss
@@ -12,7 +12,7 @@
   margin-bottom: 8px;
 }
 
-@media only screen and (max-width: $breakpoint-tablet) {
+@media only screen and (max-width: $breakpoint-tablet-large) {
   .selectWrapper {
     width: 100%;
   }
