--- a/webui/react/src/pages/Cluster.module.scss
+++ b/webui/react/src/pages/Cluster.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  height: 100%;
 
   [role='tablist'] > div {
     &:global(.ant-tabs-nav-wrap)::before {
