feat: add a button wrapper to consolidate UI accross mobile viewports

--- a/webui/react/src/pages/Admin/UserManagement.module.scss
+++ b/webui/react/src/pages/Admin/UserManagement.module.scss
@@ -13,7 +13,8 @@
 }
 
 @media only screen and (max-width: $breakpoint-tablet-large) {
-  .selectWrapper {
+  .selectWrapper,
+  .buttonWrapper {
     width: 100%;
   }
 }
