style: Update breakpoints to be more consistent across components.

--- a/webui/react/src/pages/Admin/UserManagement.module.scss
+++ b/webui/react/src/pages/Admin/UserManagement.module.scss
@@ -12,7 +12,7 @@
   margin-bottom: 8px;
 }
 
-@media only screen and (max-width: $breakpoint-tablet-large) {
+@media only screen and (max-width: $breakpoint-desktop-small) {
   .selectWrapper,
   .buttonWrapper {
     width: 100%;
