--- a/webui/react/src/pages/Admin/UserManagement.module.scss
+++ b/webui/react/src/pages/Admin/UserManagement.module.scss
@@ -24,25 +24,22 @@
   grid-area: button;
 }
 .grid {
-  width: 100%;
-  display: inline-grid;
-  grid-template-columns: minmax(auto, max-content) minmax(auto, 120px) minmax(auto, 170px) auto;
-  column-gap: 8px;
-  grid-template-rows: auto;
-  grid-template-areas: 'input roleSelect statusSelect button';
   align-items: center;
+  column-gap: 8px;
+  display: inline-grid;
+  grid-template: 'input roleSelect statusSelect button' auto / minmax(auto, max-content) minmax(auto, 120px) minmax(auto, 170px) auto;
+  width: 100%;
 }
 
 @media only screen and (max-width: $breakpoint-tablet) {
   .grid {
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto auto;
+    grid-template: 
+      'input' auto
+      'roleSelect' auto
+      'statusSelect' auto
+      'button' auto
+      / 100%;
     row-gap: 8px;
-    grid-template-areas:
-      'input'
-      'roleSelect'
-      'statusSelect'
-      'button';
   }
 }
