--- a/webui/react/src/pages/Admin/UserManagement.module.scss
+++ b/webui/react/src/pages/Admin/UserManagement.module.scss
@@ -20,26 +20,23 @@
 .statusSelect {
   grid-area: statusSelect;
 }
-.gridButton {
+.gridButtons {
   grid-area: button;
 }
 .grid {
   align-items: center;
-  column-gap: 8px;
-  display: inline-grid;
+  display: grid;
+  gap: var(--spacing-md);
   grid-template: 'input roleSelect statusSelect button' auto / minmax(auto, max-content) minmax(auto, 120px) minmax(auto, 170px) auto;
-  width: 100%;
 }
 
 @media only screen and (max-width: $breakpoint-tablet) {
   .grid {
-    display: grid;
     grid-template: 
       'input' auto
       'roleSelect' auto
       'statusSelect' auto
       'button' auto
       / 100%;
-    row-gap: 8px;
   }
 }
