--- a/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
+++ b/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
@@ -7,6 +7,8 @@
   .search {
     .header {
       border-bottom: var(--theme-stroke-width) solid var(--theme-stage-border);
+      display: flex;
+      gap: var(--spacing-md);
       margin-bottom: var(--spacing-md);
       padding-block: var(--spacing-md);
       padding-right: var(--spacing-md);
@@ -18,12 +20,8 @@
       .log {
         cursor: pointer;
         font-family: var(--theme-font-family-code);
-        line-height: 24px;
-        overflow-x: hidden;
-        text-wrap: nowrap;
 
-        &:hover,
-        &.selected {
+        &:hover {
           color: var(--theme-ix-on-active);
         }
       }
