--- a/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
+++ b/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
@@ -1,18 +1,23 @@
 .base {
-  height: 100%;
+  height: calc(100% - 64px);
 
   .container {
     display: flex;
   }
-  .search {
-    .header {
-      border-bottom: var(--theme-stroke-width) solid var(--theme-stage-border);
+  .header {
+    border-bottom: var(--theme-stroke-width) solid var(--theme-stage-border);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--spacing-md);
+    padding-block: var(--spacing-md);
+    padding-right: var(--spacing-md);
+
+    .filters {
       display: flex;
       gap: var(--spacing-md);
-      margin-bottom: var(--spacing-md);
-      padding-block: var(--spacing-md);
-      padding-right: var(--spacing-md);
     }
+  }
+  .search {
     .logContainer {
       height: 100%;
       overflow-y: auto;
