--- a/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
+++ b/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
@@ -29,6 +29,9 @@
         &:hover {
           color: var(--theme-ix-on-active);
         }
+        .key {
+          background-color: var(--theme-ix-active);
+        }
       }
     }
   }
