--- a/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
+++ b/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
@@ -19,7 +19,7 @@
   }
   .search {
     .logContainer {
-      height: 100%;
+      height: calc(100% - 22px);
       overflow-y: auto;
 
       .log {
