--- a/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
+++ b/webui/react/src/pages/TrialDetails/TrialDetailsLogs.module.scss
@@ -30,6 +30,7 @@
       .log {
         cursor: pointer;
         font-family: var(--theme-font-family-code);
+        font-size: 12px;
 
         &:hover {
           color: var(--theme-ix-on-active);
